Fix slider spacing issues

--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -11,7 +11,7 @@
 }
 
 .swiper-pagination-bullets {
-  @apply .static .mt-2;
+  @apply .static .mt-6;
 }
 
 .swiper-pagination-bullet {
